# advent-of-code-2016

./: Cargo.toml
day01/: main.rs  puzzle1.rs  puzzle2.rs  util.rs
day02/: main.rs  puzzle1.rs  puzzle2.rs  util.rs
day03/: puzzle1.rs  puzzle2.rs  util.rs
day04/: puzzle1.rs  util.rs
