[package]
name = "advent-of-code-2016"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"

[[bin]]
name = "day01"
path = "day01/main.rs"

[[bin]]
name = "day02"
path = "day02/main.rs"

[[bin]]
name = "day03"
path = "day03/main.rs"

[[bin]]
name = "day04"
path = "day04/main.rs"
